2012-04-12 Miguel de Dios  <miguel.dedios@artica.es>

	* index.php, extensions/update_manager.php,
	extensions/update_manager/lib/functions.php,
	extensions/update_manager/update_pandora.php: some fixeds and
	changes, the most important fixed/change have been the call to
	hook for the login extensions.

2012-04-12 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_config.php, extensions/update_manager.php,
	extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/lib/functions.php,
	extensions/update_manager/settings.php, extensions/update_manager/main.php:
	some changes and fixes in this part.

2012-04-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_ui.php: Fixed ui_print_timestamp function.

	Merged from trunk.

2012-04-12  Ramon Novoa  <rnovoa@artica.es>

	* operation/servers/recon_view.php: Merged from trunk. Fixed a broken
	  link.

2012-04-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/dialog.css
	 include/styles/pandora.css
	 include/auth/mysql.php
	 general/login_page.php: Modal windows improved and login page error
	 changed.
	 
	 Merged from trunk. 

	* include/styles/images/ui-bg_diagonals-thick_20_666666_40x40.png:
	Added background image of modal windows.

2012-04-12  Sergio Martin <sergio.martin@artica.es>

	* enterprise/godmode/reporting/reporting_builder.template_item.php: 
	Changed "Edit item" by "Update item" in the report template form
	for bug 3504527 merged from trunk

2012-04-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php: Fixed pendigdelete
	rename of the modules when the agent is erased for
	bug 3509327

2012-04-11 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_config.php, extensions/update_manager.php,
	extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/lib/functions.php,
	extensions/update_manager/update_pandora.php,